--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android CI/CD Pipeline
+name: Optimized Android CI/CD Pipeline
 
 on:
   push:
@@ -10,69 +10,103 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  # =================================================================
+  # JOB 1: Compilar, ejecutar pruebas unitarias y crear el APK
+  # =================================================================
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: 1. Checkout code
+        uses: actions/checkout@v4
 
-      - name: Fix line endings on gradlew
-        run: sed -i 's/\r$//' gradlew
-
-      - name: Make gradlew executable
-        run: chmod +x gradlew
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: 2. Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
 
-      - name: Cache Gradle
-        uses: actions/cache@v3
+      - name: 3. Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: 4. Run unit tests and build APK
+        run: ./gradlew testDebugUnitTest assembleDebug assembleDebugAndroidTest -Dorg.gradle.jvmargs="-Xmx3g"
+
+      - name: 5. Upload APK artifacts
+        uses: actions/upload-artifact@v4
         with:
+          name: apks
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+            app/build/outputs/apk/debug/app-debug.apk
+            app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+  # =================================================================
+  # JOB 2: Ejecutar pruebas de instrumentación en paralelo (en Linux)
+  # =================================================================
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        shard: [1, 2, 3, 4]
+      fail-fast: false
+    steps:
+      - name: 1. Checkout code
+        uses: actions/checkout@v4
+
+      - name: 2. Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: 3. Set shard index environment variable
+        run: echo "SHARD_INDEX=$((${{ matrix.shard }} - 1))" >> $GITHUB_ENV
+
+      - name: 4. Download APK artifacts
+        uses: actions/download-artifact@v4
         with:
-          api-level: 31
-          build-tools: "31.0.0"
-          ndk: "21.4.7075529"
+          name: apks
+          path: apks/
 
-      - name: Build and unit test
-        run: |
-          ./gradlew assembleDebug
-          ./gradlew testDebugUnitTest
-
-      - name: Start Android emulator
+      - name: 5. Run Android instrumented tests (Shard ${{ matrix.shard }}/${{ strategy.job-total }})
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 31
-          target: default
+          target: google_apis
           arch: x86_64
-          emulator-options: "-no-window"
+          emulator-boot-timeout: 900
+          emulator-options: -no-snapshot -no-window -no-audio -no-boot-anim
           script: |
-            adb wait-for-device
-            adb devices
+            ./gradlew connectedDebugAndroidTest -Pandroid.testInstrumentationRunnerArguments.numShards=${{ strategy.job-total }} -Pandroid.testInstrumentationRunnerArguments.shardIndex=${{ env.SHARD_INDEX }} -Dorg.gradle.jvmargs="-Xmx3g" --continue || true
 
-  publish-artifact:
-    needs: build-and-test
+      - name: 6. Debug - List report files
+        if: always()
+        run: ls -R app/build/reports/
+
+      - name: 7. Upload Test Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-reports-shard-${{ matrix.shard }}
+          path: app/build/reports/androidTests/connected/
+
+  # =================================================================
+  # JOB 3: Publicar el APK final (solo en la rama main)
+  # =================================================================
+  publish-apk:
+    needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: 1. Download APK from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: apks
+          path: apks/
 
-     # - name: Upload APK artifact
-      #  uses: actions/upload-artifact@v3
-       # with:
-        #  name: debug-apk
-         # path: app/build/outputs/apk/debug/app-debug.apk
+      - name: 2. Rename and prepare artifact for release
+        run: mv apks/app-debug.apk debug-apk.apk
 
-  # Agrega jobs de despliegue a Google Play o Firebase si los necesitas.
+      - name: 3. Upload final APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-apk
+          path: debug-apk.apk
