--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - 'sprint-*/*'
   pull_request:
     branches:
       - main
@@ -29,7 +28,7 @@ jobs:
       - name: 3. Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: 4. Run unit tests and build APK
+      - name: 4. Run unit tests and build APKs
         run: ./gradlew testDebugUnitTest assembleDebug assembleDebugAndroidTest -Dorg.gradle.jvmargs="-Xmx3g"
 
       - name: 5. Upload APK artifacts
@@ -41,7 +40,7 @@ jobs:
             app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
 
   # =================================================================
-  # JOB 2: Ejecutar pruebas de instrumentación en paralelo (en Linux)
+  # JOB 2: Ejecutar pruebas de instrumentación en paralelo (en Linux con KVM)
   # =================================================================
   test:
     needs: build
@@ -59,29 +58,24 @@ jobs:
 
       - name: 3. Set shard index environment variable
         run: echo "SHARD_INDEX=$((${{ matrix.shard }} - 1))" >> $GITHUB_ENV
-
-      - name: 4. Download APK artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: apks
-          path: apks/
-
-      - name: 5. Run Android instrumented tests (Shard ${{ matrix.shard }}/${{ strategy.job-total }})
+      
+      - name: 4. Run Android instrumented tests (Shard ${{ matrix.shard }}/${{ strategy.job-total }})
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 31
           target: google_apis
           arch: x86_64
+          enable-kvm: true 
           emulator-boot-timeout: 900
           emulator-options: -no-snapshot -no-window -no-audio -no-boot-anim
           script: |
             ./gradlew connectedDebugAndroidTest -Pandroid.testInstrumentationRunnerArguments.numShards=${{ strategy.job-total }} -Pandroid.testInstrumentationRunnerArguments.shardIndex=${{ env.SHARD_INDEX }} -Dorg.gradle.jvmargs="-Xmx3g" --continue || true
 
-      - name: 6. Debug - List report files
+      - name: 5. Debug - List report files
         if: always()
         run: ls -R app/build/reports/
 
-      - name: 7. Upload Test Reports
+      - name: 6. Upload Test Reports
         uses: actions/upload-artifact@v4
         if: always()
         with:
@@ -102,11 +96,13 @@ jobs:
           name: apks
           path: apks/
 
+      # La ruta correcta debe considerar la estructura de directorios del artefacto.
       - name: 2. Rename and prepare artifact for release
-        run: mv apks/app-debug.apk debug-apk.apk
+        run: mv apks/debug/app-debug.apk debug-apk.apk
 
       - name: 3. Upload final APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: debug-apk
           path: debug-apk.apk
+
